2004-10-22  Benoît Dejean  <tazforever@dlfp.org>

	* .cvsignore:
	* help/C/.cvsignore: Updated.
	
	* src/proctable.c: (get_process_status): Fixed glibtop_proc_state.state
	usage. Closes #153600. Change prototype. This disables a dirty hack and
	makes gsm procstate works everywhere.
	(remove_info_from_tree),(update_info), (get_info): Small cleanups.

2004-10-22  Benoît Dejean  <tazforever@dlfp.org>

	* src/proctable.c: (get_process_name): Fixed empty process name. This is
	because of a small change in libgtop. If cmdline is empty, libgtop now
	returns "" instead of NULL (this was not documented at all).
	Now : if procargs is NULL or "", the process name is given by procstate, else
	procargs is parsed.

2004-10-21  Benoît Dejean  <tazforever@dlfp.org>

	* src/procactions.c: (renice_single_process),
	(kill_single_process): Trim whitespaces. Closes #125380.

2004-10-21  Benoît Dejean  <tazforever@dlfp.org>

	* AUTHORS:
	* src/callbacks.c: (cb_about_activate): Hello, i'm the new maintainer :)
	
	* src/procman.c: (procman_free_data), (main): Removed C99 comment.
	Added missing glibtop_close().
	
	* src/util.c: (get_size_string): s/K/KB/ Closes #127510.
	Fixed float constants.
	
	* src/interface.c: (create_main_window): Added a resize-grip.Thanks to
	Ken Harris. Closes #144848.

2004-10-17  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Post release bump.

2004-10-17  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Bump version.
	* src/infoview.c: Add missing header.
	* src/interface.c: NULL vs. 0 fixes.
	* src/procman.c: Add missing header.

2004-08-28  Akagic Amila  <bono@linux.org.ba>

        * configure.in: Added 'bs' to ALL_LINGUAS.

2004-08-27  Iñaki Larrañaga  <dooteo@euskalgnu.org>

	* configure.in: Added "eu" (Basque) to ALL_LINGUAS.

2004-08-21  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Add «nb» to ALL_LINGUAS.

2004-08-13  Vincent Noel  <vnoel@cox.net>

	* src/procdialogs.c (create_proc_field_page): Set GTK_SHADOW_IN