@@ -1,5 +1,10 @@
 2004-10-22  Benoît Dejean  <tazforever@dlfp.org>
 
+	* src/load-graph.c: (get_load): Ensure that cpu load is in [0.0f;100.0f].
+	Closes #134958.
+
+2004-10-22  Benoît Dejean  <tazforever@dlfp.org>
+
 	* .cvsignore:
 	* help/C/.cvsignore: Updated.
 	
